--- a/Quotes_Server.csproj
+++ b/Quotes_Server.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quotes.cs" />
     <Compile Include="ServerCommunication.cs" />
   </ItemGroup>
   <ItemGroup>
